# cgpy

./: camera.py  main.py  model_loader.py  opengl_utils.py  pyproject.toml  skybox.py  transform.py
assets/objetos/astronaut/: gltf_embedded_0.png:Zone.Identifier
assets/skybox/: right.png.png:Zone.Identifier
myenv/: pyvenv.cfg
shaders/: skybox.vs
